--- a/apps/core/templates/our_history.html
+++ b/apps/core/templates/our_history.html
@@ -23,7 +23,6 @@
         {% include 'navsup.html' %}
         <section id="valores" class="" >
             <div class="container text-center">
-                <h2 class="display-5">Sobre Nós</h2>
                 <div class="row align-items-start">
                     <div class="col-md-4 h-100">
                         <div class="text-center" style="color:rgb(42,42,42);">
@@ -51,7 +50,7 @@
         </section>
         <section class="container">
               <div class="text-center pt-3" style="">
-                  <h2>Nossa História</h2>
+                  <h2 class="display-5">Nossa História</h2>
               </div>
               <div class="main-timeline-2">
                   <div class="timeline-2 left-2">
